...
          position: "absolute",
          top: -MHS._48,
        }}
      />
      <BView paddingHorizontal="lg" paddingBottom="xxl" gap="xxxl">
        <BView gap="sm">
          <BText variant="xxxxl">{_(msg`Welcome to`)}</BText>
          <BText variant="xxxl" color="primaryDark" fontWeight={"bold"}>
            {"Mono Template"}
          </BText>
          <BText variant="lg">{_(msg`Fast and simple template`)}</BText>
        </BView>

        <BButton size="lg" onPress={handleNextPress} label={_(msg`Continue`)} />
      </BView>
    </BSafeAreaView>
  );
}

