...

export default function IntroductionScreen() {
  const { _ } = useLingui();

  const DATA = [
    {
      title: _(msg`Base components`),
      screen: NAVIGATION_INTRODUCTION_BASE_SCREEN,
    },
    {
      title: _(msg`Flash List`),
      screen: NAVIGATION_INTRODUCTION_FLASHLIST_SCREEN,
    },
...
