appId: ${APP_ID}
---
- clearState
- launchApp
- assertVisible: "Welcome to"
- tapOn: "Continue"
- assertVisible: "Login"
