appId: ${APP_ID}
tags:
  - util
---
- assertVisible: "Welcome to"
- tapOn: "Continue"
- assertVisible: "Login"
